--- a/src/main/resources/assets/luckytntmod/lang/en_us.json
+++ b/src/main/resources/assets/luckytntmod/lang/en_us.json
@@ -158,6 +158,11 @@
 	"block.luckytntmod.city_firework" : "City Firework",
 	"block.luckytntmod.meteor_storm" : "Meteor Storm",
 	"block.luckytntmod.chunk_tnt" : "Chunk TNT",
+	"block.luckytntmod.compressed_tnt" : "Compressed TNT",
+	"block.luckytntmod.extinction" : "Extinction",
+	"block.luckytntmod.mansion" : "Mansion",
+	"block.luckytntmod.helix" : "Helix",
+	"block.luckytntmod.death_ray" : "Death Ray",
 	
 	"block.luckytntmod.nuclear_waste" : "Nuclear Waste",
 	"block.luckytntmod.uranium_ore" : "Uranium Ore",
@@ -401,6 +406,11 @@
 	"entity.luckytntmod.city_firework" : "City Firework",
 	"entity.luckytntmod.meteor_storm" : "Meteor Storm",
 	"entity.luckytntmod.chunk_tnt" : "Chunk TNT",
+	"entity.luckytntmod.compressed_tnt" : "Compressed TNT",
+	"entity.luckytntmod.extinction" : "Extinction",
+	"entity.luckytntmod.mansion" : "Mansion",
+	"entity.luckytntmod.helix" : "Helix",
+	"entity.luckytntmod.death_ray" : "Death Ray",
 				
 	"entity.luckytntmod.dynamite" : "Dynamite",
 	"entity.luckytntmod.dynamite_x5" : "Dynamite x5",
