--- a/src/main/resources/assets/luckytntmod/lang/de_de.json
+++ b/src/main/resources/assets/luckytntmod/lang/de_de.json
@@ -10,7 +10,7 @@
 	"block.luckytntmod.digging_tnt" : "Grabendes TNT",
 	"block.luckytntmod.drilling_tnt" : "Bohrendes TNT",
 	"block.luckytntmod.sphere_tnt" : "Kugel TNT",
-	"block.luckytntmod.floating_island" : "Fliegende Insel",
+	"block.luckytntmod.floating_island" : "Schwebende Insel",
 	"block.luckytntmod.ocean_tnt" : "Ozean TNT",
 	"block.luckytntmod.hellfire_tnt" : "H\u00f6llenfeuer TNT",
 	"block.luckytntmod.fire_tnt" : "Feuer TNT",
@@ -209,7 +209,7 @@
 	"item.luckytntmod.chemical_dynamite" : "Chemisches Dynamit",
 	"item.luckytntmod.reaction_dynamite" : "Reagierendes Dynamit",
 	"item.luckytntmod.hellfire_dynamite" : "H\u00f6llenfeuer Dynamit",
-	"item.luckytntmod.floating_island_dynamite" : "Fliegende Insel Dynamit",
+	"item.luckytntmod.floating_island_dynamite" : "Schwebende Insel Dynamit",
 	"item.luckytntmod.erupting_dynamite" : "Ausbrechendes Dynamit",
 	"item.luckytntmod.shatterproof_dynamite" : "Bruchsicheres Dynamit",
 	"item.luckytntmod.lava_ocean_dynamite" : "Lava Ozean Dynamit",
@@ -245,6 +245,67 @@
 	"item.luckytntmod.lucky_dynamite" : "Lucky Dynamit",
 	"item.luckytntmod.christmas_dynamite" : "Weihnachts Dynamit",
 
+	"item.luckytntmod.tnt_x5_minecart" : "TNT x5-Lore",
+	"item.luckytntmod.tnt_x20_minecart" : "TNT x20-Lore",
+	"item.luckytntmod.tnt_x100_minecart" : "TNT x100-Lore",
+	"item.luckytntmod.tnt_x500_minecart" : "TNT x500-Lore",
+	"item.luckytntmod.digging_tnt_minecart" : "Grabende TNT-Lore",
+	"item.luckytntmod.drilling_tnt_minecart" : "Bohrende TNT-Lore",
+	"item.luckytntmod.sphere_tnt_minecart" : "Kugel TNT-Lore",
+	"item.luckytntmod.floating_island_minecart" : "Schwebende Insel-Lore",
+	"item.luckytntmod.ocean_tnt_minecart" : "Ozean TNT-Lore",
+	"item.luckytntmod.hellfire_tnt_minecart" : "H\u00f6llenfeuer TNT-Lore",
+	"item.luckytntmod.fire_tnt_minecart" : "Feuer TNT-Lore",
+	"item.luckytntmod.snow_tnt_minecart" : "Schnee TNT-Lore",
+	"item.luckytntmod.freeze_tnt_minecart" : "Gefrorene TNT-Lore",
+	"item.luckytntmod.vaporize_tnt_minecart" : "Verdampfende TNT-Lore",
+	"item.luckytntmod.gravity_tnt_minecart" : "Schwerkraft TNT-Lore",
+	"item.luckytntmod.lightning_tnt_minecart" : "Blitz TNT-Lore",
+	"item.luckytntmod.cubic_tnt_minecart" : "W\u00FCrfel TNT-Lore",
+	"item.luckytntmod.arrow_tnt_minecart" : "Pfeile TNT-Lore",
+	"item.luckytntmod.timer_tnt_minecart" : "Timer TNT-Lore",
+	"item.luckytntmod.flat_tnt_minecart" : "Ebenen TNT-Lore",
+	"item.luckytntmod.miningflat_tnt_minecart" : "Bergbauebenen TNT-Lore",
+	"item.luckytntmod.compact_tnt_minecart" : "Kompakte TNT-Lore",
+	"item.luckytntmod.animal_tnt_minecart" : "Tier TNT-Lore",
+	"item.luckytntmod.erupting_tnt_minecart" : "Ausbrechende TNT-Lore",
+	"item.luckytntmod.grove_tnt_minecart" : "Hain TNT-Lore",
+	"item.luckytntmod.ender_tnt_minecart" : "Ender TNT-Lore",
+	"item.luckytntmod.meteor_shower_minecart" : "Meteoritenschauer TNT-Lore",
+	"item.luckytntmod.inverted_tnt_minecart" : "Invertierte TNT-Lore",
+	"item.luckytntmod.nuclear_tnt_minecart" : "Nukleare TNT-Lore",
+	"item.luckytntmod.chemical_tnt_minecart" : "Chemisches TNT-Lore",
+	"item.luckytntmod.reaction_tnt_minecart" : "Reagierende TNT-Lore",
+	"item.luckytntmod.village_defense_minecart" : "Dorf Verteidigungs-Lore",
+	"item.luckytntmod.zombie_apocalypse_minecart" : "Zombie Apokalypsen-Lore",
+	"item.luckytntmod.shatterproof_tnt_minecart" : "Bruchsichere TNT-Lore",
+	"item.luckytntmod.lava_ocean_tnt_minecart" : "Lava Ozean TNT-Lore",
+	"item.luckytntmod.wool_tnt_minecart" : "Wolle TNT-Lore",
+	"item.luckytntmod.say_goodbye_minecart" : "Sag auf Wiedersehen-Lore",
+	"item.luckytntmod.angry_miners_minecart" : "W\u00FCtende Minenarbeiter-Lore",
+	"item.luckytntmod.withering_tnt_minecart" : "Ausd\u00f6rrende TNT-Lore",
+	"item.luckytntmod.pumpkin_bomb_minecart" : "K\u00FCrbis Bomben-Lore",
+	"item.luckytntmod.nuclear_waste_tnt_minecart" : "Atomm\u00FCll TNT-Lore",
+	"item.luckytntmod.air_strike_minecart" : "Luftschlag-Lore",
+	"item.luckytntmod.spamming_tnt_minecart" : "Zum\u00FCllende TNT-Lore",
+	"item.luckytntmod.roulette_tnt_minecart" : "Roulette TNT-Lore",
+	"item.luckytntmod.xray_tnt_minecart" : "XRay TNT-Lore",
+	"item.luckytntmod.farming_tnt_minecart" : "Farm TNT-Lore",
+	"item.luckytntmod.swap_tnt_minecart" : "Vertauschende TNT-Lore",
+	"item.luckytntmod.igniter_tnt_minecart" : "Z\u00FCnder TNT-Lore",
+	"item.luckytntmod.butter_tnt_minecart" : "Butter TNT-Lore",
+	"item.luckytntmod.physics_tnt_minecart" : "Physics TNT-Lore",
+	"item.luckytntmod.ore_tnt_minecart" : "Erze TNT-Lore",
+	"item.luckytntmod.redstone_tnt_minecart" : "Redstone TNT-Lore",
+	"item.luckytntmod.random_tnt_minecart" : "Zuf\u00e4llige TNT-Lore",
+	"item.luckytntmod.turret_tnt_minecart" : "Gesch\u00FCtz TNT-Lore",
+	"item.luckytntmod.pulse_tnt_minecart" : "Pulsierende TNT-Lore",
+	"item.luckytntmod.picky_tnt_minecart" : "W\u00e4hlerrische TNT-Lore",
+	"item.luckytntmod.big_tnt_minecart" : "Gro\u00dfe TNT-Lore",
+	"item.luckytntmod.honey_tnt_minecart" : "Honig TNT-Lore",
+	"item.luckytntmod.eating_tnt_minecart" : "Essende TNT-Lore",
+	"item.luckytntmod.lucky_tnt_minecart" : "Lucky TNT-Lore",
+
 	"item.luckytntmod.nuclear_waste" : "Atomm\u00FCll",
 	"item.luckytntmod.red_candy" : "Rotes Bonbon",
 	"item.luckytntmod.green_candy" : "Gr\u00FCnes Bonbon",
@@ -265,7 +326,7 @@
 	"entity.luckytntmod.digging_tnt" : "Grabendes TNT",
 	"entity.luckytntmod.drilling_tnt" : "Bohrendes TNT",
 	"entity.luckytntmod.sphere_tnt" : "Kugel TNT",
-	"entity.luckytntmod.floating_island" : "Fliegende Insel",
+	"entity.luckytntmod.floating_island" : "Schwebende Insel",
 	"entity.luckytntmod.ocean_tnt" : "Ozean TNT",
 	"entity.luckytntmod.hellfire_tnt" : "H\u00f6llenfeuer TNT",
 	"entity.luckytntmod.fire_tnt" : "Feuer TNT",
@@ -450,7 +511,7 @@
 	"entity.luckytntmod.chemical_dynamite" : "Chemisches Dynamit",
 	"entity.luckytntmod.reaction_dynamite" : "Reagierendes Dynamit",
 	"entity.luckytntmod.hellfire_dynamite" : "H\u00f6llenfeuer Dynamit",
-	"entity.luckytntmod.floating_island_dynamite" : "Fliegende Insel Dynamit",
+	"entity.luckytntmod.floating_island_dynamite" : "Schwebende Insel Dynamit",
 	"entity.luckytntmod.erupting_dynamite" : "Ausbrechendes Dynamit",
 	"entity.luckytntmod.shatterproof_dynamite" : "Bruchsicheres Dynamit",
 	"entity.luckytntmod.lava_ocean_dynamite" : "Lava Ozean Dynamit",
@@ -485,6 +546,67 @@
 	"entity.luckytntmod.end_dynamite" : "End Dynamit",
 	"entity.luckytntmod.lucky_dynamite" : "Lucky Dynamit",
 	"entity.luckytntmod.christmas_dynamite" : "Weihnachts Dynamit",
+
+	"entity.luckytntmod.tnt_x5_minecart" : "TNT x5-Lore",
+	"entity.luckytntmod.tnt_x20_minecart" : "TNT x20-Lore",
+	"entity.luckytntmod.tnt_x100_minecart" : "TNT x100-Lore",
+	"entity.luckytntmod.tnt_x500_minecart" : "TNT x500-Lore",
+	"entity.luckytntmod.digging_tnt_minecart" : "Grabende TNT-Lore",
+	"entity.luckytntmod.drilling_tnt_minecart" : "Bohrende TNT-Lore",
+	"entity.luckytntmod.sphere_tnt_minecart" : "Kugel TNT-Lore",
+	"entity.luckytntmod.floating_island_minecart" : "Schwebende Insel-Lore",
+	"entity.luckytntmod.ocean_tnt_minecart" : "Ozean TNT-Lore",
+	"entity.luckytntmod.hellfire_tnt_minecart" : "H\u00f6llenfeuer TNT-Lore",
+	"entity.luckytntmod.fire_tnt_minecart" : "Feuer TNT-Lore",
+	"entity.luckytntmod.snow_tnt_minecart" : "Schnee TNT-Lore",
+	"entity.luckytntmod.freeze_tnt_minecart" : "Gefrorene TNT-Lore",
+	"entity.luckytntmod.vaporize_tnt_minecart" : "Verdampfende TNT-Lore",
+	"entity.luckytntmod.gravity_tnt_minecart" : "Schwerkraft TNT-Lore",
+	"entity.luckytntmod.lightning_tnt_minecart" : "Blitz TNT-Lore",
+	"entity.luckytntmod.cubic_tnt_minecart" : "W\u00FCrfel TNT-Lore",
+	"entity.luckytntmod.arrow_tnt_minecart" : "Pfeile TNT-Lore",
+	"entity.luckytntmod.timer_tnt_minecart" : "Timer TNT-Lore",
+	"entity.luckytntmod.flat_tnt_minecart" : "Ebenen TNT-Lore",
+	"entity.luckytntmod.miningflat_tnt_minecart" : "Bergbauebenen TNT-Lore",
+	"entity.luckytntmod.compact_tnt_minecart" : "Kompakte TNT-Lore",
+	"entity.luckytntmod.animal_tnt_minecart" : "Tier TNT-Lore",
+	"entity.luckytntmod.erupting_tnt_minecart" : "Ausbrechende TNT-Lore",
+	"entity.luckytntmod.grove_tnt_minecart" : "Hain TNT-Lore",
+	"entity.luckytntmod.ender_tnt_minecart" : "Ender TNT-Lore",
+	"entity.luckytntmod.meteor_shower_minecart" : "Meteoritenschauer TNT-Lore",
+	"entity.luckytntmod.inverted_tnt_minecart" : "Invertierte TNT-Lore",
+	"entity.luckytntmod.nuclear_tnt_minecart" : "Nukleare TNT-Lore",
+	"entity.luckytntmod.chemical_tnt_minecart" : "Chemisches TNT-Lore",
+	"entity.luckytntmod.reaction_tnt_minecart" : "Reagierende TNT-Lore",
+	"entity.luckytntmod.village_defense_minecart" : "Dorf Verteidigungs-Lore",
+	"entity.luckytntmod.zombie_apocalypse_minecart" : "Zombie Apokalypsen-Lore",
+	"entity.luckytntmod.shatterproof_tnt_minecart" : "Bruchsichere TNT-Lore",
+	"entity.luckytntmod.lava_ocean_tnt_minecart" : "Lava Ozean TNT-Lore",
+	"entity.luckytntmod.wool_tnt_minecart" : "Wolle TNT-Lore",
+	"entity.luckytntmod.say_goodbye_minecart" : "Sag auf Wiedersehen-Lore",
+	"entity.luckytntmod.angry_miners_minecart" : "W\u00FCtende Minenarbeiter-Lore",
+	"entity.luckytntmod.withering_tnt_minecart" : "Ausd\u00f6rrende TNT-Lore",
+	"entity.luckytntmod.pumpkin_bomb_minecart" : "K\u00FCrbis Bomben-Lore",
+	"entity.luckytntmod.nuclear_waste_tnt_minecart" : "Atomm\u00FCll TNT-Lore",
+	"entity.luckytntmod.air_strike_minecart" : "Luftschlag-Lore",
+	"entity.luckytntmod.spamming_tnt_minecart" : "Zum\u00FCllende TNT-Lore",
+	"entity.luckytntmod.roulette_tnt_minecart" : "Roulette TNT-Lore",
+	"entity.luckytntmod.xray_tnt_minecart" : "XRay TNT-Lore",
+	"entity.luckytntmod.farming_tnt_minecart" : "Farm TNT-Lore",
+	"entity.luckytntmod.swap_tnt_minecart" : "Vertauschende TNT-Lore",
+	"entity.luckytntmod.igniter_tnt_minecart" : "Z\u00FCnder TNT-Lore",
+	"entity.luckytntmod.butter_tnt_minecart" : "Butter TNT-Lore",
+	"entity.luckytntmod.physics_tnt_minecart" : "Physics TNT-Lore",
+	"entity.luckytntmod.ore_tnt_minecart" : "Erze TNT-Lore",
+	"entity.luckytntmod.redstone_tnt_minecart" : "Redstone TNT-Lore",
+	"entity.luckytntmod.random_tnt_minecart" : "Zuf\u00e4llige TNT-Lore",
+	"entity.luckytntmod.turret_tnt_minecart" : "Gesch\u00FCtz TNT-Lore",
+	"entity.luckytntmod.pulse_tnt_minecart" : "Pulsierende TNT-Lore",
+	"entity.luckytntmod.picky_tnt_minecart" : "W\u00e4hlerrische TNT-Lore",
+	"entity.luckytntmod.big_tnt_minecart" : "Gro\u00dfe TNT-Lore",
+	"entity.luckytntmod.honey_tnt_minecart" : "Honig TNT-Lore",
+	"entity.luckytntmod.eating_tnt_minecart" : "Essende TNT-Lore",
+	"entity.luckytntmod.lucky_tnt_minecart" : "Lucky TNT-Lore",
 		
 	"entity.luckytntmod.meteor" : "Meteor",
 	"entity.luckytntmod.mini_meteor" : "Mini Meteor",
@@ -521,7 +643,7 @@
 	"luckytntmod.config.title" : "Lucky TNT Konfiguration",
 	"luckytntmod.config.done" : "Fertig",
 	"luckytntmod.config.reset" : "Zur\u00fccksetzen",
-	"luckytntmod.config.island_offset" : "Fliegende Insel H\u00f6he",
+	"luckytntmod.config.island_offset" : "Schwebende Insel H\u00f6he",
 	"luckytntmod.config.drop_offset" : "Fallende Projektil H\u00f6he",
   	"luckytntmod.config.first_tnt": "Erste Custom TNT Explosion",  	
   	"luckytntmod.config.first_type": "Erste Explosionsart",  	
