--- a/src/main/resources/assets/luckytntmod/lang/en_us.json
+++ b/src/main/resources/assets/luckytntmod/lang/en_us.json
@@ -245,6 +245,67 @@
 	"item.luckytntmod.christmas_dynamite" : "Christmas Dynamite",
 	"item.luckytntmod.lucky_dynamite" : "Lucky Dynamite",
 
+	"item.luckytntmod.tnt_x5_minecart" : "Minecart with TNT x5",
+	"item.luckytntmod.tnt_x20_minecart" : "Minecart with TNT x20",
+	"item.luckytntmod.tnt_x100_minecart" : "Minecart with TNT x100",
+	"item.luckytntmod.tnt_x500_minecart" : "Minecart with TNT x500",
+	"item.luckytntmod.digging_tnt_minecart" : "Minecart with Digging TNT",
+	"item.luckytntmod.drilling_tnt_minecart" : "Minecart with Drilling TNT",
+	"item.luckytntmod.sphere_tnt_minecart" : "Minecart with Sphere TNT",
+	"item.luckytntmod.floating_island_minecart" : "Minecart with Floating Island",
+	"item.luckytntmod.ocean_tnt_minecart" : "Minecart with Ocean TNT",
+	"item.luckytntmod.hellfire_tnt_minecart" : "Minecart with Hellfire TNT",
+	"item.luckytntmod.fire_tnt_minecart" : "Minecart with Fire TNT",
+	"item.luckytntmod.snow_tnt_minecart" : "Minecart with Snow TNT",
+	"item.luckytntmod.freeze_tnt_minecart" : "Minecart with Freeze TNT",
+	"item.luckytntmod.vaporize_tnt_minecart" : "Minecart with Vaporize TNT",
+	"item.luckytntmod.gravity_tnt_minecart" : "Minecart with Gravity TNT",
+	"item.luckytntmod.lightning_tnt_minecart" : "Minecart with Lightning TNT",
+	"item.luckytntmod.cubic_tnt_minecart" : "Minecart with Cubic TNT",
+	"item.luckytntmod.arrow_tnt_minecart" : "Minecart with Arrow TNT",
+	"item.luckytntmod.timer_tnt_minecart" : "Minecart with Timer TNT",
+	"item.luckytntmod.flat_tnt_minecart" : "Minecart with Flat TNT",
+	"item.luckytntmod.miningflat_tnt_minecart" : "Minecart with Miningflat TNT",
+	"item.luckytntmod.compact_tnt_minecart" : "Minecart with Compact TNT",
+	"item.luckytntmod.animal_tnt_minecart" : "Minecart with Animal TNT",
+	"item.luckytntmod.erupting_tnt_minecart" : "Minecart with Erupting TNT",
+	"item.luckytntmod.grove_tnt_minecart" : "Minecart with Grove TNT",
+	"item.luckytntmod.ender_tnt_minecart" : "Minecart with Ender TNT",
+	"item.luckytntmod.meteor_shower_minecart" : "Minecart with Meteor Shower",
+	"item.luckytntmod.inverted_tnt_minecart" : "Minecart with Inverted TNT",
+	"item.luckytntmod.nuclear_tnt_minecart" : "Minecart with Nuclear TNT",
+	"item.luckytntmod.chemical_tnt_minecart" : "Minecart with Chemical TNT",
+	"item.luckytntmod.reaction_tnt_minecart" : "Minecart with Reaction TNT",
+	"item.luckytntmod.village_defense_minecart" : "Minecart with Village Defense",
+	"item.luckytntmod.zombie_apocalypse_minecart" : "Minecart with Zombie Apocalypse",
+	"item.luckytntmod.shatterproof_tnt_minecart" : "Minecart with Shatterproof TNT",
+	"item.luckytntmod.lava_ocean_tnt_minecart" : "Minecart with Lava Ocean TNT",
+	"item.luckytntmod.wool_tnt_minecart" : "Minecart with Wool TNT",
+	"item.luckytntmod.say_goodbye_minecart" : "Minecart with Say Goodbye",
+	"item.luckytntmod.angry_miners_minecart" : "Minecart with Angry Miners",
+	"item.luckytntmod.withering_tnt_minecart" : "Minecart with Withering TNT",
+	"item.luckytntmod.pumpkin_bomb_minecart" : "Minecart with Pumpkin Bomb",
+	"item.luckytntmod.nuclear_waste_tnt_minecart" : "Minecart with Nuclear Waste TNT",
+	"item.luckytntmod.air_strike_minecart" : "Minecart with Air Strike",
+	"item.luckytntmod.spamming_tnt_minecart" : "Minecart with Spamming TNT",
+	"item.luckytntmod.roulette_tnt_minecart" : "Minecart with Roulette TNT",
+	"item.luckytntmod.xray_tnt_minecart" : "Minecart with XRay TNT",
+	"item.luckytntmod.farming_tnt_minecart" : "Minecart with Farming TNT",
+	"item.luckytntmod.swap_tnt_minecart" : "Minecart with Swap TNT",
+	"item.luckytntmod.igniter_tnt_minecart" : "Minecart with Igniter TNT",
+	"item.luckytntmod.butter_tnt_minecart" : "Minecart with Butter TNT",
+	"item.luckytntmod.physics_tnt_minecart" : "Minecart with Physics TNT",
+	"item.luckytntmod.ore_tnt_minecart" : "Minecart with Ore TNT",
+	"item.luckytntmod.redstone_tnt_minecart" : "Minecart with Redstone TNT",
+	"item.luckytntmod.random_tnt_minecart" : "Minecart with Random TNT",
+	"item.luckytntmod.turret_tnt_minecart" : "Minecart with Turret TNT",
+	"item.luckytntmod.pulse_tnt_minecart" : "Minecart with Pulse TNT",
+	"item.luckytntmod.picky_tnt_minecart" : "Minecart with Picky TNT",
+	"item.luckytntmod.big_tnt_minecart" : "Minecart with Big TNT",
+	"item.luckytntmod.honey_tnt_minecart" : "Minecart with Honey TNT",
+	"item.luckytntmod.eating_tnt_minecart" : "Minecart with Eating TNT",
+	"item.luckytntmod.lucky_tnt_minecart" : "Minecart with Lucky TNT",
+
 	"item.luckytntmod.nuclear_waste" : "Nuclear Waste",
 	"item.luckytntmod.red_candy" : "Red Candy",
 	"item.luckytntmod.green_candy" : "Green Candy",
@@ -485,6 +546,67 @@
 	"entity.luckytntmod.dripstone_dynamite" : "Dripstone Dynamite",
 	"entity.luckytntmod.end_dynamite" : "End Dynamite",
 	"entity.luckytntmod.christmas_dynamite" : "Christmas Dynamite",
+
+	"entity.luckytntmod.tnt_x5_minecart" : "Minecart with TNT x5",
+	"entity.luckytntmod.tnt_x20_minecart" : "Minecart with TNT x20",
+	"entity.luckytntmod.tnt_x100_minecart" : "Minecart with TNT x100",
+	"entity.luckytntmod.tnt_x500_minecart" : "Minecart with TNT x500",
+	"entity.luckytntmod.digging_tnt_minecart" : "Minecart with Digging TNT",
+	"entity.luckytntmod.drilling_tnt_minecart" : "Minecart with Drilling TNT",
+	"entity.luckytntmod.sphere_tnt_minecart" : "Minecart with Sphere TNT",
+	"entity.luckytntmod.floating_island_minecart" : "Minecart with Floating Island",
+	"entity.luckytntmod.ocean_tnt_minecart" : "Minecart with Ocean TNT",
+	"entity.luckytntmod.hellfire_tnt_minecart" : "Minecart with Hellfire TNT",
+	"entity.luckytntmod.fire_tnt_minecart" : "Minecart with Fire TNT",
+	"entity.luckytntmod.snow_tnt_minecart" : "Minecart with Snow TNT",
+	"entity.luckytntmod.freeze_tnt_minecart" : "Minecart with Freeze TNT",
+	"entity.luckytntmod.vaporize_tnt_minecart" : "Minecart with Vaporize TNT",
+	"entity.luckytntmod.gravity_tnt_minecart" : "Minecart with Gravity TNT",
+	"entity.luckytntmod.lightning_tnt_minecart" : "Minecart with Lightning TNT",
+	"entity.luckytntmod.cubic_tnt_minecart" : "Minecart with Cubic TNT",
+	"entity.luckytntmod.arrow_tnt_minecart" : "Minecart with Arrow TNT",
+	"entity.luckytntmod.timer_tnt_minecart" : "Minecart with Timer TNT",
+	"entity.luckytntmod.flat_tnt_minecart" : "Minecart with Flat TNT",
+	"entity.luckytntmod.miningflat_tnt_minecart" : "Minecart with Miningflat TNT",
+	"entity.luckytntmod.compact_tnt_minecart" : "Minecart with Compact TNT",
+	"entity.luckytntmod.animal_tnt_minecart" : "Minecart with Animal TNT",
+	"entity.luckytntmod.erupting_tnt_minecart" : "Minecart with Erupting TNT",
+	"entity.luckytntmod.grove_tnt_minecart" : "Minecart with Grove TNT",
+	"entity.luckytntmod.ender_tnt_minecart" : "Minecart with Ender TNT",
+	"entity.luckytntmod.meteor_shower_minecart" : "Minecart with Meteor Shower",
+	"entity.luckytntmod.inverted_tnt_minecart" : "Minecart with Inverted TNT",
+	"entity.luckytntmod.nuclear_tnt_minecart" : "Minecart with Nuclear TNT",
+	"entity.luckytntmod.chemical_tnt_minecart" : "Minecart with Chemical TNT",
+	"entity.luckytntmod.reaction_tnt_minecart" : "Minecart with Reaction TNT",
+	"entity.luckytntmod.village_defense_minecart" : "Minecart with Village Defense",
+	"entity.luckytntmod.zombie_apocalypse_minecart" : "Minecart with Zombie Apocalypse",
+	"entity.luckytntmod.shatterproof_tnt_minecart" : "Minecart with Shatterproof TNT",
+	"entity.luckytntmod.lava_ocean_tnt_minecart" : "Minecart with Lava Ocean TNT",
+	"entity.luckytntmod.wool_tnt_minecart" : "Minecart with Wool TNT",
+	"entity.luckytntmod.say_goodbye_minecart" : "Minecart with Say Goodbye",
+	"entity.luckytntmod.angry_miners_minecart" : "Minecart with Angry Miners",
+	"entity.luckytntmod.withering_tnt_minecart" : "Minecart with Withering TNT",
+	"entity.luckytntmod.pumpkin_bomb_minecart" : "Minecart with Pumpkin Bomb",
+	"entity.luckytntmod.nuclear_waste_tnt_minecart" : "Minecart with Nuclear Waste TNT",
+	"entity.luckytntmod.air_strike_minecart" : "Minecart with Air Strike",
+	"entity.luckytntmod.spamming_tnt_minecart" : "Minecart with Spamming TNT",
+	"entity.luckytntmod.roulette_tnt_minecart" : "Minecart with Roulette TNT",
+	"entity.luckytntmod.xray_tnt_minecart" : "Minecart with XRay TNT",
+	"entity.luckytntmod.farming_tnt_minecart" : "Minecart with Farming TNT",
+	"entity.luckytntmod.swap_tnt_minecart" : "Minecart with Swap TNT",
+	"entity.luckytntmod.igniter_tnt_minecart" : "Minecart with Igniter TNT",
+	"entity.luckytntmod.butter_tnt_minecart" : "Minecart with Butter TNT",
+	"entity.luckytntmod.physics_tnt_minecart" : "Minecart with Physics TNT",
+	"entity.luckytntmod.ore_tnt_minecart" : "Minecart with Ore TNT",
+	"entity.luckytntmod.redstone_tnt_minecart" : "Minecart with Redstone TNT",
+	"entity.luckytntmod.random_tnt_minecart" : "Minecart with Random TNT",
+	"entity.luckytntmod.turret_tnt_minecart" : "Minecart with Turret TNT",
+	"entity.luckytntmod.pulse_tnt_minecart" : "Minecart with Pulse TNT",
+	"entity.luckytntmod.picky_tnt_minecart" : "Minecart with Picky TNT",
+	"entity.luckytntmod.big_tnt_minecart" : "Minecart with Big TNT",
+	"entity.luckytntmod.honey_tnt_minecart" : "Minecart with Honey TNT",
+	"entity.luckytntmod.eating_tnt_minecart" : "Minecart with Eating TNT",
+	"entity.luckytntmod.lucky_tnt_minecart" : "Minecart with Lucky TNT",
 	
 	"entity.luckytntmod.meteor" : "Meteor",
 	"entity.luckytntmod.mini_meteor" : "Mini Meteor",
