--- a/src/main/resources/assets/luckytntmod/lang/de_de.json
+++ b/src/main/resources/assets/luckytntmod/lang/de_de.json
@@ -168,6 +168,13 @@
 	"block.luckytntmod.stone_cold" : "Eiskalt",
 	"block.luckytntmod.jungle_tnt" : "Dschungel TNT",
 	"block.luckytntmod.jumping_tnt" : "Springendes TNT",
+	"block.luckytntmod.wasteland_tnt" : "\u00d6dland TNT",
+	"block.luckytntmod.tnt_x10000" : "TNT x10000",
+	"block.luckytntmod.custom_firework" : "Custom Feuerwerk",
+	"block.luckytntmod.atlantis" : "Atlantis",
+	"block.luckytntmod.solar_eruption" : "Sonneneruption",
+	"block.luckytntmod.vredefort" : "Vredefort",
+	"block.luckytntmod.colossal_tnt" : "Kolossales TNT",
 			
 	"block.luckytntmod.nuclear_waste" : "Atomm\u00FCll",
 	"block.luckytntmod.uranium_ore" : "Uranerz",
@@ -491,6 +498,13 @@
 	"entity.luckytntmod.stone_cold" : "Eiskalt",
 	"entity.luckytntmod.jungle_tnt" : "Dschungel TNT",
 	"entity.luckytntmod.jumping_tnt" : "Springendes TNT",
+	"entity.luckytntmod.wasteland_tnt" : "\u00d6dland TNT",
+	"entity.luckytntmod.tnt_x10000" : "TNT x10000",
+	"entity.luckytntmod.custom_firework" : "Custom Feuerwerk",
+	"entity.luckytntmod.atlantis" : "Atlantis",
+	"entity.luckytntmod.solar_eruption" : "Sonneneruption",
+	"entity.luckytntmod.vredefort" : "Vredefort",
+	"entity.luckytntmod.colossal_tnt" : "Kolossales TNT",
 		
 	"entity.luckytntmod.dynamite" : "Dynamit",
 	"entity.luckytntmod.dynamite_x5" : "Dynamit x5",
@@ -636,6 +650,8 @@
 	"entity.luckytntmod.tsar_bomba_bomb" : "Zar Bombe Bombe",
 	"entity.luckytntmod.acidic_projectile" : "\u00c4tzendes Projektil",
 	"entity.luckytntmod.christmas_dynamite_projectile" : "Weihnachts Dynamit",
+	"entity.luckytntmod.solar_eruption_projectile" : "Sonneneruption Projektil",
+	"entity.luckytntmod.vredefort_projectile" : "Vredefort Meteorit",
 	
 	"entity.luckytntmod.angry_miner" : "W\u00FCtender Minenarbeiter",
 	"entity.luckytntmod.toxic_cloud" : "Giftige Wolke",
