--- a/src/main/resources/assets/luckytntmod/lang/en_us.json
+++ b/src/main/resources/assets/luckytntmod/lang/en_us.json
@@ -168,6 +168,13 @@
 	"block.luckytntmod.stone_cold" : "Stone Cold",
 	"block.luckytntmod.jungle_tnt" : "Jungle TNT",
 	"block.luckytntmod.jumping_tnt" : "Jumping TNT",
+	"block.luckytntmod.wasteland_tnt" : "Wasteland TNT",
+	"block.luckytntmod.tnt_x10000" : "TNT x10000",
+	"block.luckytntmod.custom_firework" : "Custom Firework",
+	"block.luckytntmod.atlantis" : "Atlantis",
+	"block.luckytntmod.solar_eruption" : "Solar Eruption",
+	"block.luckytntmod.vredefort" : "Vredefort",
+	"block.luckytntmod.colossal_tnt" : "Colossal TNT",
 	
 	"block.luckytntmod.nuclear_waste" : "Nuclear Waste",
 	"block.luckytntmod.uranium_ore" : "Uranium Ore",
@@ -492,6 +499,13 @@
 	"entity.luckytntmod.stone_cold" : "Stone Cold",
 	"entity.luckytntmod.jungle_tnt" : "Jungle TNT",
 	"entity.luckytntmod.jumping_tnt" : "Jumping TNT",
+	"entity.luckytntmod.wasteland_tnt" : "Wasteland TNT",
+	"entity.luckytntmod.tnt_x10000" : "TNT x10000",
+	"entity.luckytntmod.custom_firework" : "Custom Firework",
+	"entity.luckytntmod.atlantis" : "Atlantis",
+	"entity.luckytntmod.solar_eruption" : "Solar Eruption",
+	"entity.luckytntmod.vredefort" : "Vredefort",
+	"entity.luckytntmod.colossal_tnt" : "Colossal TNT",
 				
 	"entity.luckytntmod.dynamite" : "Dynamite",
 	"entity.luckytntmod.dynamite_x5" : "Dynamite x5",
@@ -636,6 +650,8 @@
 	"entity.luckytntmod.tsar_bomba_bomb" : "Tsar Bomba Bomb",
 	"entity.luckytntmod.acidic_projectile" : "Acidic Projectile",
 	"entity.luckytntmod.christmas_dynamite_projectile" : "Christmas Dynamite",
+	"entity.luckytntmod.solar_eruption_projectile" : "Solar Eruption Projectile",
+	"entity.luckytntmod.vredefort_projectile" : "Vredefort Meteor",
 
 	"entity.luckytntmod.angry_miner" : "Angry Miner",
 	"entity.luckytntmod.toxic_cloud" : "Toxic Cloud",
